k8s-resources/istio/gateway/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gw
  namespace: istio-system
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: gateway #ingress
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: "tls-cert-secret"
